初步完成过度动画以及首页加载