@@ -1,9 +1,3 @@
 # fixjson
 
-## 启动
-
-增加启动参数
-
-```
---add-modules javafx.controls--add-modules javafx.controls
-```
+> JSON构建工具
